force-app/main/default/objects/Employee__c/fields/How_Could_We_Contact__c.field-meta.xml
<CustomField>
    <fullName>How_Could_We_Contact__c</fullName>
    <label>How Could We Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>