force-app/main/default/objects/Employee__c/validationRules/Enforce_Contact_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Contact_Information</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( How_Could_We_Contact__c ,&quot;Phone&quot;) &amp;&amp; ISBLANK( Phone__c)) || 
(ISPICKVAL( How_Could_We_Contact__c ,&quot;Email&quot;) &amp;&amp; ISBLANK(Email__c ))</errorConditionFormula>
    <errorMessage>Please enter Phone OR Email.</errorMessage>
</ValidationRule>