force-app/main/default/objects/Employee__c/validationRules/Limit_Age_Enter.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Age_Enter</fullName>
    <active>true</active>
    <description>Limit the age entered. Allowed value from 1 to 100 only.</description>
    <errorConditionFormula>Age__c &lt; 0 || Age__c &gt; 100</errorConditionFormula>
    <errorMessage>The age entered is not acceptance. Please enter value from 1 to 100.</errorMessage>
</ValidationRule>